[package]
name = "zklink-oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
num-bigint = "0.4.4"
sync_vm = { git = "https://github.com/matter-labs/era-sync_vm.git", branch = "v1.3.3", features = [
  "external_testing",
] }
pairing = { package = "pairing_ce", version = "0.28.5" }

# For local test
[patch."https://github.com/matter-labs/era-sync_vm"]
sync_vm = { path = "../zksync/era-sync_vm/" }
