[package]
name = "zklink-oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
num-bigint = "0.4.4"
sync_vm = { git = "https://github.com/zkLinkProtocol/advanced-circuit-component", branch = "v1.3.3", features = [
  "external_testing",
] }
pairing = { package = "pairing_ce", version = "0.28.5" }
base64 = "0.21.5"
wormhole-sdk = { git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.17.1" }
serde_wormhole = { git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.17.1" }
pythnet-sdk = { git = "https://github.com/pyth-network/pyth-crosschain", version = "2.0.0" }
byteorder = "1.5.0"
num = "0.4.1"
sha3 = "0.10.8"
anyhow = "1.0.76"
serde = { version = "1.0.194", features = ["derive"] }
bigdecimal = "0.4.2"
k256 = { version = "0.13.3", features = ["arithmetic", "ecdsa"] }
secp256k1 = { version = "0.28.1", features = [
  "hashes",
  "rand-std",
  "global-context",
  "recovery",
] }


# For local test
# [patch."https://github.com/matter-labs/era-sync_vm"]
# sync_vm = { path = "../zksync/era-sync_vm/" }

# Wormhole uses patching to resolve some of its own dependencies. We need to
# make sure that we use the same patch instead of simply pointing the original
# dependency at git otherwise those relative imports will fail.
[patch.crates-io]
serde_wormhole = { git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.17.1" }
